# Public domain

REGISTER("--enable-static",	"Produce a static binary [default: no]")
HDEFINE(VERSION, "\"1.0\"")

CHECK(cc)
CHECK(agar, 1.0)
CHECK(agar-sg, 1.0)

if [ "${HAVE_AGAR}" != "yes" -o "${HAVE_AGAR_SG}" != "yes" ]; then
	echo "This demo requires Agar/GL and Agar-SG"
	exit 1
fi

MDEFINE(CFLAGS, "$CFLAGS -I$SRC")

if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi
