# $Csoft: configure.in,v 1.1 2005/09/28 15:46:13 vedge Exp $
# Public domain

REGISTER("--enable-static",	"Produce a static binary [default: no]")

HDEFINE(VERSION, "\"1.0\"")

CHECK(cc)
CHECK(agar, 1.0)
CHECK(opengl, 1.1)
CHECK(glu, 1.1)

if [ "${HAVE_AGAR}" != "yes" -o "${HAVE_OPENGL}" != "yes" ]; then
	echo "This demo requires the Agar library and OpenGL."
	exit 1
fi
if [ "${HAVE_GLU}" != "yes" ]; then
	echo "This demo requires the GLU library."
	exit 1
fi


MDEFINE(CFLAGS, "$CFLAGS -I$SRC")
#MDEFINE(CFLAGS, "$CFLAGS -Wall -Werror -Wmissing-prototypes -Wno-unused")
#MDEFINE(CFLAGS, "$CFLAGS -Wno-missing-headers")

if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi

