# Public domain

REGISTER("--enable-static",	"Produce a static binary [default: no]")

CHECK(cc)
CHECK(pthreads)
CHECK(sdl)
CHECK(opengl)
CHECK(freetype)
CHECK(agar, 1.3.3)
CHECK(agar-math)

if [ "${HAVE_AGAR}" != "yes" ]; then
	echo "This demo requires Agar and Agar-SC installed on your system."
	exit 1
fi
if [ "${HAVE_AGAR_MATH}" != "yes" ]; then
	echo "* This package requires Agar-Math (http://libagar.org/)"
	exit 1
fi

if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi
