# Public domain

REGISTER("--enable-static",	"Produce a static binary [default: no]")

CHECK(cc)
CHECK(pthreads)
CHECK(sdl)
CHECK(opengl)
CHECK(freetype)
CHECK(agar, 1.3)

if [ "${HAVE_AGAR}" != "yes" ]; then
	echo "This demo requires Agar installed on your system."
	exit 1
fi

if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi
