dnl
dnl $Csoft: configure.in,v 1.1 2003/12/07 04:46:33 vedge Exp $
dnl
dnl Process this file with GNU autoconf to produce a configure script.
dnl This configure script will be used to generate BSDBuild's bundled
dnl copy of libtool.
dnl
dnl Public domain
dnl
AC_INIT(README)
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADER
LT_INIT([win32-dll])
LT_LANG([C++])
AC_PROG_LIBTOOL
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CHECK_TOOL(WINDRES, [windres], [:])
AC_OUTPUT([Makefile])
