# Public domain

CONFIG_GUESS("../../mk/config.guess")

REGISTER_SECTION("rgedit options:")
REGISTER("--with-agar[=PREFIX]",	"Location of Agar library [check]")
REGISTER("--with-agar-rg[=PREFIX]",	"Location of Agar-SG library [check]")

PACKAGE("rgedit")
VERSION("1.0")
DEFAULT_DIR(DATADIR, "${PREFIX}/share/agar")
DEFAULT_DIR(LOCALEDIR, "${DATADIR}/locale")

REQUIRE(cc)
REQUIRE(agar, 1.6.0, ${prefix_agar})
REQUIRE(agar-rg, 1.6.0, ${prefix_agar_rg})

if [ "${enable_nls}" = "yes" ]; then
	REQUIRE(gettext)
fi

C_DEFINE(_USE_AGAR_STD)
C_DEFINE(_USE_AGAR_QUEUE)
C_DEFINE(_USE_AGAR_TYPES)
C_DEFINE(_USE_AGAR_ATTRIBUTES)
C_DEFINE(_USE_AGAR_NULLABILITY)
C_NO_SECURE_WARNINGS()

C_INCDIR($BLD)
C_INCDIR_CONFIG($BLD/config)
