# $Csoft: configure.in,v 1.1 2005/05/10 12:22:07 vedge Exp $
# Public domain

REGISTER("--enable-static",	"Produce a static binary [default: no]")

HDEFINE(VERSION, "\"1.0\"")

CHECK(cc)
REQUIRE(agar, 1.0)
CHECK(pctr)

MDEFINE(CFLAGS, "$CFLAGS -I$SRC")
#MDEFINE(CFLAGS, "$CFLAGS -Wall -Werror -Wmissing-prototypes -Wno-unused")
#MDEFINE(CFLAGS, "$CFLAGS -Wno-missing-headers")

if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi

