# Public domain

REGISTER("--enable-static",	"Produce a static binary [default: no]")

HDEFINE(VERSION, "\"1.0\"")
HDEFINE(RELEASE, "\"I hear the whispered words of the Trees\"")

CHECK(cc)
REQUIRE(agar, 1.3)
REQUIRE(agar-vg, 1.3)
REQUIRE(agar-rg, 1.3)
REQUIRE(agar-map, 1.3)
REQUIRE(agar-dev, 1.3)

if [ "${HAVE_AGAR}" != "yes" ]; then
	echo "This application requires Agar."
	exit 1
fi
if [ "${HAVE_AGAR_VG}" != "yes" ]; then
	echo "This application requires Agar-VG."
	exit 1
fi
if [ "${HAVE_AGAR_RG}" != "yes" ]; then
	echo "This application requires Agar-RG."
	exit 1
fi
if [ "${HAVE_AGAR_MAP}" != "yes" ]; then
	echo "This application requires Agar-MAP."
	exit 1
fi

MDEFINE(CFLAGS, "$CFLAGS -I$SRC")
#MDEFINE(CFLAGS, "$CFLAGS -Wall -Werror -Wmissing-prototypes -Wno-unused")
#MDEFINE(CFLAGS, "$CFLAGS -Wno-missing-headers")

MDEFINE(SHAREDIR, "\${PREFIX}/share/agarpaint")
HDEFINE(SHAREDIR, "\"$PREFIX/share/agarpaint\"")

if [ "${enable_static}" = "yes" ]; then
	MDEFINE(LDFLAGS, "-static")
fi
